crates/zizmor/src/audit/snapshots/zizmor__audit__template_injection__tests__template_injection_fix_github_actor.snap
---
source: crates/zizmor/src/audit/template_injection.rs
expression: fixed_content
---
name: Test Template Injection
on: push
jobs:
  test:
    runs-on: ubuntu-latest
    steps:
      - name: Vulnerable step
        run: |
          echo "Hello ${GITHUB_ACTOR}"
          echo "Processing user input"
        env:
          GITHUB_ACTOR: ${{ github.actor }}
