crates/zizmor/src/audit/snapshots/zizmor__audit__template_injection__tests__template_injection_fix_github_ref_name.snap
---
source: crates/zizmor/src/audit/template_injection.rs
expression: fixed_content
---
name: Test Template Injection
on: push
jobs:
  test:
    runs-on: ubuntu-latest
    steps:
      - name: Vulnerable step
        run: echo "Branch is ${GITHUB_REF_NAME}"
        env:
          GITHUB_REF_NAME: ${{ github.ref_name }}
